# migri-appointment

./: .gitignore  README.md  pyproject.toml
migri_appointment/: __init__.py  client.py  errors.py  service_catalog.py  types.py
scripts/: __init__.py  notify.py
tests/: test_client.py  test_notify.py
